fixed nowrap breaking flex issue by adding min-width to parent container

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ body {
 
 .container {
     text-align: center;
-    width:800px;
+    width: 800px;
+    min-width: 0;
 }
 
 h1 {
